--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "arrayaccess/traydigita-core-module",
-    "description": "Core module for tray digita",
+    "name": "arrayaccess/traydigita-media-module",
+    "description": "Media module for tray digita",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -23,10 +23,10 @@
         "squizlabs/php_codesniffer": "3.7.2",
         "slevomat/coding-standard": "^8.13"
     },
-    "scripts": {
-        "post-create-project-cmd": [
-            "ArrayAccess\\TrayDigita\\ComposerCreateProject::composerDoCreateProject"
-        ]
+    "autoload": {
+        "psr-4": {
+            "ArrayAccess\\TrayDigita\\App\\Modules\\Media\\" : "./"
+        }
     },
     "config": {
         "optimize-autoloader": true,
